--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,144 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+/* header.css */
+.header {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  padding: 10px 20px;
+  background: blueviolet;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.navbar {
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.navbar li {
+  margin-right: 20px;
 }
+
+.navbar a {
+  text-decoration: none;
+  color: white;
+}
+
+.logo {
+  display: flex;
+  align-items: center;
+ 
+}
+
+.logo img {
+  height: 100%; /* Adjust the height as needed */
+  width: 100px;
+}
+
+/* team-card.css */
+
+/* team-card.css */
+.team-card {
+  background: #fff;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  margin: 10px;
+  width: 300px; /* Adjust the width as needed */
+}
+
+.team-img {
+  max-width: 100%;
+  height: auto;
+  border-radius: 4px;
+}
+
+.card-details {
+  margin-top: 15px;
+}
+
+.team-card h2 {
+  font-size: 18px;
+  margin: 0;
+  text-align: left;
+}
+
+/* venue-card.css */
+.venue-card {
+  background: #fff;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  width: 800px; /* Adjust the width as needed */
+  margin: 10px;
+  display: flex;
+  flex-direction: row;
+  text-align: center;
+}
+
+.venue-card-details {
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.venue-card img {
+  max-width: 100%;
+  height: auto;
+  border-radius: 8px 8px 0 0;
+}
+
+.venue-card h2 {
+  font-size: 18px;
+  margin: 10px 0;
+  text-align: center;
+}
+
+/* button.css */
+.custom-button {
+  margin: 10px; /* Adjust the margin as needed */
+}
+
+/* input.css */
+.custom-input {
+  /* Your CSS styles for the input element */
+  border: 1px solid #ccc;
+  padding: 10px;
+  font-size: 16px;
+  width: 100%;
+  border-radius: 4px;
+  margin-bottom: 10px;
+}
+
+/* india-card.css */
+.india-card {
+  background: #fff;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  margin: 10px;
+  max-width: 300px;
+  text-align: center;
+}
+
+.india-card img {
+  max-width: 100%;
+  height: auto;
+  border-radius: 8px 8px 0 0;
+}
+
+.india-card h2 {
+  font-size: 18px;
+  margin: 10px 0;
+  text-align: center;
+}
+
+
+
+
+
+/* team-card.css */
+
